<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="WS" Id="{5bfc02f3-b752-45ba-bdc4-c6184dbf6cad}">
    <Declaration><![CDATA[TYPE WS :
STRUCT

	MesGTI						: REAL ;  	(* (W/m2) Cal Averaged GTI value over available (non error) GTI *)
	MesGHI						: REAL ;  	(* (W/m2) Cal Averaged GHI value over available (non error) GHI *)
                                      	
	MesGTI_Cumul				: REAL ;  	(* (kWh/m2) Cal Cumulated value of GTI over a 10s period  *)
	MesGHI_Cumul				: REAL ;  	(* (kWh/m2) Cal Cumulated value of GHI over a 10s period *) 
	
	MesAlarmCode				: WORD ; 	(* Alarm Code 					*)
	MesWarningCode				: WORD ; 	(* Warning Code    				*)
	MesEventCode				: WORD ; 	(* Event Code      				*)
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>